[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/my_ship.png" type="Texture" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://sprites/exhaust_01.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "exchaust"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/exchaust:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[node name="player" type="Node2D"]
script = ExtResource( 2 )
upgrade = 2

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="exchaust" type="Sprite" parent="Sprite"]
position = Vector2( 0, 23 )
rotation = -1.5708
texture = ExtResource( 3 )
vframes = 8

[node name="Gun0" type="Position2D" parent="Sprite"]
position = Vector2( -18.5, -2 )

[node name="Gun1" type="Position2D" parent="Sprite"]
position = Vector2( 18.5, -2 )

[node name="Gun2" type="Position2D" parent="Sprite"]
position = Vector2( 0, -16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "exchaust"
anims/exchaust = SubResource( 1 )
